# wave

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  wave.cabal
.github/workflows/: ci.yaml
Codec/Audio/: Wave.hs
Codec/Audio/Wave/: Riff.hs
audio-samples/: 1ch-16000hz-64bit-float.rf64  1ch-16000hz-64bit-float.w64  1ch-44100hz-16bit.w64  1ch-48000hz-32bit-float.rf64  1ch-48000hz-32bit-float.w64  2ch-11025hz-24bit.w64  2ch-8000hz-8bit.w64
tests/Codec/Audio/: WaveSpec.hs
