cabal-version:   1.18
name:            wave
version:         0.2.0
license:         BSD3
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==8.6.5 ghc ==8.8.4 ghc ==8.10.2
homepage:        https://github.com/mrkkrp/wave
bug-reports:     https://github.com/mrkkrp/wave/issues
synopsis:        Work with WAVE and RF64 files
description:     Work with WAVE and RF64 files.
category:        Codec, Audio
build-type:      Simple
data-files:
    audio-samples/*.wav
    audio-samples/*.rf64

extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/wave.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  Codec.Audio.Wave
    default-language: Haskell2010
    build-depends:
        base >=4.12 && <5.0,
        bytestring >=0.2 && <0.11,
        cereal >=0.3 && <0.6,
        containers >=0.5 && <0.7,
        transformers >=0.4 && <0.6

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall

    if flag(dev)
        ghc-options:
            -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
            -Wnoncanonical-monad-instances

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-tools:      hspec-discover >=2.0 && <3.0
    hs-source-dirs:   tests
    other-modules:    Codec.Audio.WaveSpec
    default-language: Haskell2010
    build-depends:
        QuickCheck >=2.8.2 && <3.0,
        base >=4.12 && <5.0,
        bytestring >=0.2 && <0.11,
        containers >=0.5 && <0.7,
        hspec >=2.0 && <3.0,
        temporary >=1.1 && <1.4,
        wave -any

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall
