cabal-version:   2.4
name:            wave
version:         0.2.0
license:         BSD-3-Clause
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==9.0.2 ghc ==9.2.5 ghc ==9.4.4
homepage:        https://github.com/mrkkrp/wave
bug-reports:     https://github.com/mrkkrp/wave/issues
synopsis:        Work with WAVE and RF64 files
description:     Work with WAVE and RF64 files.
category:        Codec, Audio
build-type:      Simple
data-files:
    audio-samples/*.wav
    audio-samples/*.rf64

extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/wave.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  Codec.Audio.Wave
    default-language: GHC2021
    build-depends:
        base >=4.15 && <5.0,
        bytestring >=0.2 && <0.12,
        cereal >=0.3 && <0.6,
        containers >=0.5 && <0.7

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-tools:      hspec-discover >=2.0 && <3.0
    hs-source-dirs:   tests
    other-modules:    Codec.Audio.WaveSpec
    default-language: GHC2021
    build-depends:
        QuickCheck >=2.8.2 && <3.0,
        base >=4.15 && <5.0,
        bytestring >=0.2 && <0.12,
        containers >=0.5 && <0.7,
        hspec >=2.0 && <3.0,
        temporary >=1.1 && <1.4,
        wave

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall
